--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Nunito', sans-serif;
 	color: #faf3bc;
-	background: #420600 url('img/bg-texture.jpg') repeat;
+	background: #CC9900 repeat;
 }
 
 a {
